syntax = "proto3";

package payments;

option go_package = "github.com/leta/order-management-system/payments";

service Payments {
    rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {}

    rpc ProcessMpesaPayment (MpesaPaymentRequest) returns (MpesaPaymentResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
    string status = 1;
}

message MpesaPaymentRequest {
    string orderId = 1;
    string customerId = 2;
    uint32 amount = 3;
    uint64 phoneNumber = 4;
    string callbackUrl = 5;
    string reference = 6;
    string description = 7;
}

message MpesaPaymentResponse {
    string checkoutRequestId = 1;
    string merchantRequestId = 2;
    string customerMessage = 3;
    string responseCode = 4;
}


